--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.24.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-autolink": "^1.6.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.0.0",
     "react-native-material-dropdown": "^0.11.1"
