fontFamily is dependent on platform

--- a/app.json
+++ b/app.json
@@ -25,5 +25,8 @@
     "ios": {
       "supportsTablet": true
     }
+  },
+  "infoPlist": {
+    "NSCameraUsageDescription": "This app uses the camera to scan barcodes on event tickets."
   }
 }
